vertical image layout on small screen, fix policy icon size, fix donation text color

--- a/_sass/oneflow/_base.scss
+++ b/_sass/oneflow/_base.scss
@@ -238,6 +238,12 @@ figure {
     figcaption {
       width: 100%;
     }
+
+    /* Use vertical layout on small screens, then side-by-side larger. */
+    flex-direction: column;
+    @include breakpoint($figure-image-vertical-breakpoint) {
+      flex-direction: row;
+    }
   }
 }
 
