--- a/_sass/oneflow/_donate.scss
+++ b/_sass/oneflow/_donate.scss
@@ -12,6 +12,7 @@
 
 .donation-link {
   width: 80px;
+  color: $text-color;
 }
 
 @media (min-width: 512px) {
