--- a/_sass/oneflow/_variables.scss
+++ b/_sass/oneflow/_variables.scss
@@ -126,6 +126,7 @@ $medium-wide: 900px !default;
 $large: 1024px !default;
 $x-large: 1280px !default;
 $max-width: $x-large !default;
+$figure-image-vertical-breakpoint: 455px;
 
 
 /* Other ========================================================================== */
